--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
 body{
     background-color: darkblue;
+    background-image: url(code-1839406_1280.jpg);
+    background-size: 100%;
+    background-blend-mode:overlay;
+
 
 }
 img{
